--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="nav">
-        <div><img src="/images/alexander-shatov-qt7S2QuAhJI-unsplash.jpg" alt="">
+        <div><img src="./images/alexander-shatov-qt7S2QuAhJI-unsplash.jpg" alt="">
             Plug 'n' Play
         </div>
         <ul>
@@ -32,12 +32,12 @@
         <center>
         <div class="audio-player">
             <div class="icon-container">
-              <img src="/images/20211113_191146.jpg" class="audio-icon" viewBox="0 0 20 20" fill="currentColor">
+              <img src="./images/20211113_191146.jpg" class="audio-icon" viewBox="0 0 20 20" fill="currentColor">
             </div>
             <div class="song">
                 <p>Family Ties . Baby Keem</p>
             </div>
-            <audio src="/images/Baby Keem - family ties.mp3"></audio>
+            <audio src="./images/Baby Keem - family ties.mp3"></audio>
             <div class="controls">
               <button class="player-button">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="#3D3132">
@@ -56,31 +56,31 @@
         <div class="table-hits">
             <table style="border-spacing: 0;">
                 <tr>
-                    <td><img src="/images/ced79977ce6bec68cdbba54ffcab7294.jpg" alt=""></td>
+                    <td><img src="./images/ced79977ce6bec68cdbba54ffcab7294.jpg" alt=""></td>
                     <td><u>Stay</u></td>
                     <td>Kid Laroi, Justin Bieber</td>
                     <td>2:21</td>
                 </tr>
                 <tr>
-                    <td><img src="/images/37e0f4cb91ca2328c1473825502d4c7d.jpg" alt=""></td>
+                    <td><img src="./images/37e0f4cb91ca2328c1473825502d4c7d.jpg" alt=""></td>
                     <td><u>Hurricane</u></td>
                     <td>Kanye West, The Weeknd, Lil Baby</td>
                     <td>3:58</td>
                 </tr>
                 <tr>
-                    <td><img src="/images/d99a3ea1ae998fee1c07d2a66a7284d6.jpg" alt=""></td>
+                    <td><img src="./images/d99a3ea1ae998fee1c07d2a66a7284d6.jpg" alt=""></td>
                     <td><u>Easy On Me</u></td>
                     <td>Adele</td>
                     <td>3:44</td>
                 </tr>
                 <tr>
-                    <td><img src="/images/99609011a8e24db24ced925ac8842430.jpg" alt=""></td>
+                    <td><img src="./images/99609011a8e24db24ced925ac8842430.jpg" alt=""></td>
                     <td><u>Bloody Samaritan</u></td>
                     <td>Ayra Starr</td>
                     <td>3:07</td>
                 </tr>
                 <tr>
-                    <td><img src="/images/556d82295c7204beac4a87a61d899977.jpg" alt=""></td>
+                    <td><img src="./images/556d82295c7204beac4a87a61d899977.jpg" alt=""></td>
                     <td><u>love nwantiti (ah ah ah)</u></td>
                     <td>CKay</td>
                     <td>2:25</td>
@@ -92,10 +92,10 @@
 
     <div class="explore-name"><p>Explore <i class="fas fa-arrow-right"></i></p></div>
     <div class="explore">
-        <div class="album"><img src="/images/20211113_111155.jpg" alt=""></div>
-        <div class="album"><img src="/images/20211113_154856.jpg" alt=""></div>
-        <div class="album"><img src="/images/20211113_154941.jpg" alt=""></div>
-        <div class="album"><img src="/images/397a5b17e60d38025e2f9af1c094ba3f.jpg" alt=""></div>
+        <div class="album"><img src="./images/20211113_111155.jpg" alt=""></div>
+        <div class="album"><img src="./images/20211113_154856.jpg" alt=""></div>
+        <div class="album"><img src="./images/20211113_154941.jpg" alt=""></div>
+        <div class="album"><img src="./images/397a5b17e60d38025e2f9af1c094ba3f.jpg" alt=""></div>
         <i class="fas fa-chevron-right" style="margin-top: 150px; margin-left: 30px;"></i>
     </div>
     <script src="script.js"></script>
